--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/Joeento/librafy/issues"
   },
-  "homepage": "https://github.com/Joeento/librafy#readme"
+  "homepage": "https://github.com/Joeento/librafy#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.24"
+  }
 }
